# nasp_compendium

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  analysis_prompt.md  apply_cleanup.sh  nasp_annotated_decoupled_labels.patch  nasp_compact_leaf_rank_routing.patch  nasp_compact_no_legend_less_wide.patch  pyproject.toml
.github/workflows/: ci.yml
agent/: README.md  analysis_prompt.md  conventions.md  curation_lessons.md  vocabulary.yaml
agent/prompts/: audit_compendium.md  audit_paper.md  backfill_conventions.md  calibrate_against_gold_standard.md  calibrate_held_out.md  curate_paper.md  curation_retro.md
agent/specs/: tiered_vocab_spec.md
calibration_drafts/: dececco_2019.md  dou_2017.md  gulen_2023.md  lopez_polo_2024.md  martinez_2024.md
data/: marker_genes.tsv
docs/: README.md  compendium_conventions.md  conventions.md  curation_lessons.md
docs/compendium/: dececco_2019.md  dou_2017.md  gulen_2023.md  lian_2018.gold.md  lopez_polo_2024.md  mao_2024.gold.md  martinez_2024.gold.md  qin_2024.gold.md  tyshkovskiy_2026.gold.md
docs/marker_genes/: README.md  aging_hallmarks.md  autophagy.md  cgamp_transport.md  ifn_i_output.md  immunosenescence.md  index.md  inflammaging.md  inflammasome.md  isr.md  metabolic_context.md  mitochondrial_na_sensing.md  nasp_dna_sensing.md  nasp_feedback.md  nasp_restriction.md  nasp_rna_sensing.md  nfkb_cytokine_output.md  sasp.md  senescence.md  signaling_context.md  signaling_context_ifn_jak_stat.md  signaling_context_nfkb.md  signaling_context_tbk1_irf.md  signaling_context_tlr.md  te_depression.md  te_derepression.md
docs/specs/: tiered_vocab_spec.md
hooks/: regenerate-marker-docs
nasp_compendium/: __init__.py  cli.py  diff_compendium.py  display.py  gene_modules.py  regenerate.py  render_docs.py  review_packet.py  score_compendium.py  style.py  summarize.py  summarize_compendium.py  types.py  validate_compendium.py  vocab_tiers.py  vocabulary.yaml
nasp_compendium/visualization/: gene_modules.py
prompts/: audit_compendium.md  audit_paper.md  backfill_conventions.md  calibrate_against_gold_standard.md  curate_paper.md  curation_retro.md
tests/: test_display.py  test_gene_modules.py
