[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nasp_compendium"
version = "0.1.0"
description = "Curation and analyses of NASP in publicly-available single-cell atlases."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
]

dependencies = [
  "graphviz==0.21",
  "matplotlib==3.10.9",
  "numpy==2.4.6",
  "pandas==3.0.3",
  "PyYAML==6.0.3",
  "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pyright",
  "pytest",
  "pytest-cov",
  "ipython",
  "ipykernel",
  "pre-commit",
]

[project.scripts]
compendium = "nasp_compendium.cli:main"

[project.urls]
Homepage = "https://github.com/sciencesteveho/nasp_compendium"
Source = "https://github.com/sciencesteveho/nasp_compendium"
Issues = "https://github.com/sciencesteveho/nasp_compendium/issues"

[tool.coverage.run]
source = ["nasp_compendium"]
omit = [
  "tests/**",
  "**/*_test.py",
  "**/test_*.py",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nasp_compendium*"]

[tool.setuptools.package-data]
nasp_compendium = ["data/*.tsv"]

[tool.ruff]
src = ["nasp_compendium"]
extend-include = [ "*.ipynb" ]
target-version = "py311"
line-length = 80
indent-width = 4

exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__",
  "*.egg-info",
]

[tool.ruff.lint]
select = [
  "F",    # Pyflakes
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "I",    # isort-compatible import sorting
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "RUF",  # Ruff-specific rules
  "C4",     # flake8-comprehensions
  "BLE",    # flake8-blind-except
  "RUF100", # unused noqa
  "D",   # pydocstyle
]

ignore = [
  "D413",  # Missing blank line after last section.
  "D205",  # 1 blank line required before class docstring.
]

# Warn about unused imports, but do not auto-delete on save.
unfixable = [
  "F401",
]

fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["nasp_compendium"]

force-single-line = true
single-line-exclusions = ["typing", "collections.abc"]
combine-as-imports = true
split-on-trailing-comma = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401",  # Allow public re-exports.
]

"*_test.py" = [
  "E402",  # Allow test-local imports after setup when needed.
]

"tests/**/*.py" = [
  "E402",
]

"scripts/**/*.py" = [
  "E402",  # Useful for scripts with path/bootstrap setup.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = [
  "nasp_compendium",
]

exclude = [
  "**/node_modules",
  "**/.*",
  "build",
  "dist",
  "**/*.egg-info",
  "**/__pycache__",
  "**/*.pyc",
  "venv",
  "notebooks",
]

reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

python_files = [
  "*_test.py",
  "test_*.py",
]

addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--import-mode=importlib",
]
